--- a/RTSFramework/RTSFramework.Concrete.Adatpers/RTSFramework.Concrete.Adatpers.csproj
+++ b/RTSFramework/RTSFramework.Concrete.Adatpers/RTSFramework.Concrete.Adatpers.csproj
@@ -63,6 +63,8 @@
       <Name>RTSFramework.Core</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
