--- a/RTSFramework/RTSFramework.Concrete.Git/app.config
+++ b/RTSFramework/RTSFramework.Concrete.Git/app.config
@@ -4,75 +4,75 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-1.2.2.0" newModel="1.2.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-1.2.2.0" newModel="1.2.2.0" oldVersion="0.0.0.0-1.2.1.0" newVersion="1.2.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Reflection.Metadata" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-1.4.2.0" newModel="1.4.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-1.4.2.0" newModel="1.4.2.0" oldVersion="0.0.0.0-1.4.2.0" newVersion="1.4.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.0.2.0" newModel="4.0.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.0.2.0" newModel="4.0.2.0" oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Text.Encoding.CodePages" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.1.0.0" newModel="4.1.0.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.1.0.0" newModel="4.1.0.0" oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Composition.AttributedModel" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-1.0.32.0" newModel="1.0.32.0" />
+        <bindingRedirect oldModel="0.0.0.0-1.0.32.0" newModel="1.0.32.0" oldVersion="0.0.0.0-1.0.32.0" newVersion="1.0.32.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Composition.Runtime" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-1.0.32.0" newModel="1.0.32.0" />
+        <bindingRedirect oldModel="0.0.0.0-1.0.32.0" newModel="1.0.32.0" oldVersion="0.0.0.0-1.0.32.0" newVersion="1.0.32.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Composition.TypedParts" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-1.0.32.0" newModel="1.0.32.0" />
+        <bindingRedirect oldModel="0.0.0.0-1.0.32.0" newModel="1.0.32.0" oldVersion="0.0.0.0-1.0.32.0" newVersion="1.0.32.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Composition.Hosting" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-1.0.32.0" newModel="1.0.32.0" />
+        <bindingRedirect oldModel="0.0.0.0-1.0.32.0" newModel="1.0.32.0" oldVersion="0.0.0.0-1.0.32.0" newVersion="1.0.32.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Reflection" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.IO" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.IO.FileSystem" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.0.3.0" newModel="4.0.3.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.0.3.0" newModel="4.0.3.0" oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Linq" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Security.Cryptography.Algorithms" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.3.0.0" newModel="4.3.0.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.3.0.0" newModel="4.3.0.0" oldVersion="0.0.0.0-4.1.0.0" newVersion="4.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Runtime.InteropServices" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.IO.FileSystem.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.0.3.0" newModel="4.0.3.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.0.3.0" newModel="4.0.3.0" oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Security.Cryptography.Primitives" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.0.2.0" newModel="4.0.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.0.2.0" newModel="4.0.2.0" oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Xml.ReaderWriter" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -80,19 +80,19 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.IO.Compression" publicKeyToken="b77a5c561934e089" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.2.0.0" newModel="4.2.0.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.2.0.0" newModel="4.2.0.0" oldVersion="0.0.0.0-4.1.2.0" newVersion="4.1.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Xml.XPath.XDocument" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.1.0.0" newModel="4.1.0.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.1.0.0" newModel="4.1.0.0" oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Linq.Expressions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.1.2.0" newModel="4.1.2.0" oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Threading.Thread" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-4.0.2.0" newModel="4.0.2.0" />
+        <bindingRedirect oldModel="0.0.0.0-4.0.2.0" newModel="4.0.2.0" oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.VisualStudio.TestPlatform.ObjectModel" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
@@ -104,7 +104,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Mono.Cecil" publicKeyToken="0738eb9f132ed756" culture="neutral" />
-        <bindingRedirect oldModel="0.0.0.0-0.9.6.0" newModel="0.9.6.0" />
+        <bindingRedirect oldModel="0.0.0.0-0.9.6.0" newModel="0.9.6.0" oldVersion="0.0.0.0-0.9.6.0" newVersion="0.9.6.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
